fixed content area width being cut off

--- a/frontend/src/components/NotesEditor/ContentArea.css
+++ b/frontend/src/components/NotesEditor/ContentArea.css
@@ -4,7 +4,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     /* height: 100%; */
-    max-width: 1000px;
+    max-width: 100%;
     width: 100%;
     padding: 1em;
     margin: 0 auto;
